docs: add module instructions